--- a/org.ekstep.suggestcontent-1.0/editor/suggestContent.html
+++ b/org.ekstep.suggestcontent-1.0/editor/suggestContent.html
@@ -34,8 +34,8 @@
                 <div class="content">
                     <p class="description text-block-ellipsis" ng-if="lesson.description">{{ lesson.description }}</p>
                     <div class="extra">
-                        <div class="ui right floated content" ng-click="addContent(lesson, $index);generateTelemetry({type: 'click', subtype: 'AddButton', target: 'Add'})" ng-if="mode.toLowerCase() === 'edit'">
-                            <a><span class="suggestedbottom">ADD</span></a> 
+                        <div class="ui right floated content no-margin" ng-click="addContent(lesson, $index);generateTelemetry({type: 'click', subtype: 'AddButton', target: 'Add'})" ng-if="mode.toLowerCase() === 'edit'">
+                            <a><span class="suggestedbottom addbutton">ADD</span></a> 
                         </div>
                         <div class="middle aligned content">
                             <div class="meta" ng-if="lesson.creator" ><span class="suggestedbottom">By {{ lesson.creator }}</span></div>
