--- a/org.ekstep.unitmeta-1.3/editor/unitmeta.html
+++ b/org.ekstep.unitmeta-1.3/editor/unitmeta.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="field" ng-class="mode == 'Edit' ? '' : 'disabled'">
                    <label>Keywords</label>
-                        <tags-input ng-model="unit.keywords" display-property="lemma" placeholder="Enter Keywords" replace-spaces-with-dashes="false" ng-class="mode == 'Edit' ? '' : 'remove-delete'">
+                        <tags-input ng-model="unit.keywords" display-property="lemma" placeholder="Enter Keywords" replace-spaces-with-dashes="false" ng-class="mode == 'Edit' ? '' : 'remove-delete'" class="keywords">
                             <auto-complete source="loadKeywords($query)" min-length="0" load-on-focus="true" load-on-empty="true" max-results-to-show="100" template="my-custom-template"></auto-complete>
                         </tags-input>
                         <script type="text/ng-template" id="my-custom-template">
